# level2-3-cv-finalproject-cv-09

./: .gitignore  .gitmodules  README.md
.github/ISSUE_TEMPLATE/: feature_request.md
backend/app/: main.py
backend/celery/: GCS.py  gcskey.json  pyproject.toml  redis.json  start.sh  test.py  worker_SDs.py  worker_deepfloyd.py  worker_sd2.py  worker_sdxl.py  worker_td.py
backend/celery/output/checkpoint-15000/: scaler.pt
backend/celery/parseq/: pyproject.toml  utils.py
backend/celery/parseq/strhub/data/: dataset.py
backend/fastapi/: infer.py  main.py  pyproject.toml  stable_diffusion.py
backend/fastapi/output/checkpoint-15000/: random_states_0.pkl
data/: AIHub_blip_vqa_v1.ipynb  AIHub_json2txt.ipynb  AIHub_ko2en.py  AIHub_ko2en.sh  convert_mario_laion_format.ipynb  convert_mario_laion_format_v2.ipynb  pyproject.toml
data/CRAFT/: .gitignore  config.py  detect.py  pyproject.toml
frontend/: package.json  stable_diffusion.py
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css  index.js  setupProxy.js
frontend/src/components/: DeletableChip.js  Footer.css  Footer.js  HowTo_data.js  Loading.js  Loding.js  MainNav.css  MainNav.js  MakingNav.css  MakingNav.js  PromptStart.css  PromptStart.js  Question.css  Question01.js  Question02.js  Question03.js  Question04.js  ScrollToTop.js  SelectCard.css  SelectCard.js  SelectCard_data.js  SideNavbar.css  SideNavbar.js  Slideshow.css  Slideshow.js
frontend/src/components/SelectCard_data/: Area_SelectCard_data.js  BgColor_SelectCard_data.js  FontColor_SelectCard_data.js  Purpose_SelectCard_data.js  Style_SelectCard_data.js
frontend/src/components/assets/: loading.avif
frontend/src/components/assets/Area_imgs/: IT.avif  accomodation.avif  agriculture.avif  beauty.avif  cafe.avif  construction.avif  education.avif  fasion.avif  manufacturing.avif  medicine.avif  music.avif  real_estate.avif  restaurant.avif  sports.avif  study.avif  travel.avif
frontend/src/components/assets/BgColor_imgs/: black.avif  green.avif  mint.avif  orange.avif  rainbow.avif
frontend/src/components/assets/FontColor_imgs/: beige.avif  blue.avif  brown.avif  grey.avif  navy.avif  pink.avif  purple.avif  red.avif  white.avif  yellow.avif
frontend/src/components/assets/HowTo_imgs/: howto_check.avif  howto_chips.avif  howto_main.avif  howto_modeselect.avif  howto_select.avif
frontend/src/components/assets/Purpose_imgs/: advertise.avif  campaign.avif  club.avif  concert.avif  contest.avif  event.avif  festival.avif  non_profit.avif  promotion.avif  public_announcement.avif
frontend/src/components/assets/Style_imgs/: abstract.avif  elegant.avif  fancy.avif  gothic.avif  modern.avif  mysterious.avif  simple.avif  typography.avif  vintage.avif
frontend/src/components/assets/carousel/: boostcamp.avif  index.js  pinkbee.avif  scv.avif
frontend/src/context/: index.js
frontend/src/pages/: About.css  About.js  Adv.css  Adv.js  Devs.css  Devs.js  Home.css  Home.js  HowTo.css  HowTo.js  Making.css  Making.js  ModeSelect.css  ModeSelect.js  PromptCheck.js  Result.css  Result.js
frontend/src/pages/Making/: Area.js  BackgroundColor.js  Color.js  FontColor.js  Making.css  Making.js  Purpose.js  SelectCard.css  SelectCard.js  Style.js
logo_generation/: infer.py  pyproject.toml  train.py  util.py
logo_generation/configs/: infer.yaml  train.yaml
logo_generation/deepfloyd/: KoT5_train.py  infer.py  train.py
logo_generation/deepfloyd/configs/: KoT5_train.yaml  infer.yaml  train.yaml
logo_generation/deepfloyd/output/checkpoint-100/: random_states_0.pkl
logo_generation/detoxic/: main.py
logo_generation/stablediffusion2/: infer.py  logo_dataset.py  train.py
logo_generation/stablediffusion2/configs/: infer.yaml  train.yaml
logo_generation/stablediffusionXL/: inference.py  train_dreambooth.sh  train_dreambooth_lora_sdxl.py  train_text_to_image.sh  train_text_to_image_lora_sdxl.py
logo_generation/textdiffuser-2/: .gitignore  custom_infer.py  custom_train_textdiffuser2_t2i_lora.py  pyproject.toml
logo_generation/translator/: T5_translator.py  googletranslator.py
