[tool.poetry]
name = "logo-generation-model"
version = "0.1.0"
description = ""
authors = ["Ohkingtaek"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.0.0"
torchvision = "0.15.1"
diffusers = "0.26.3"
omegaconf = "2.3.0"
transformers = "4.37.2"
accelerate = "0.27.2"
sentencepiece = "0.2.0"
bitsandbytes = "0.42.0"
peft = "^0.8.2"
googletrans = "3.1.0a0"
detoxify = "^0.5.2"
natsort = "^8.4.0"
datasets = "^2.18.0"
fastchat = "^0.1.0"
wandb = "^0.16.5"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
