[tool.poetry]
name = "logo-gen-celery"
version = "0.1.0"
description = ""
authors = ["ohkingtaek <mm0741@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.0.0"
torchvision = "0.15.1"
diffusers = "^0.27.2"
datasets = "^2.18.0"
transformers = "^4.39.1"
fastchat = "^0.1.0"
accelerate = "^0.28.0"
googletrans = "4.0.0-rc1"
celery = "^5.3.6"
google-cloud-storage = "^2.16.0"
google-auth = "^2.29.0"
google-api-core = "^2.18.0"
google-api-python-client = "^2.123.0"
timm = "^0.9.16"
pytorch-lightning = "^2.2.1"
lmdb = "^1.4.1"
nltk = "^3.8.1"
redis = "^5.0.3"
sentencepiece = "^0.2.0"
peft = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
