[tool.poetry]
name = "be-fastapi"
version = "0.1.0"
description = ""
authors = ["ohkingtaek <mm0741@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
requests = "^2.31.0"
pydantic = "^2.6.4"
celery = "^5.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
