[tool.poetry]
name = "textdiffuser-2"
version = "0.1.0"
description = ""
authors = ["ohkingtaek <mm0741@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.2.0"
torchvision = "0.17.0"
xformers = "0.0.24"
wandb = "^0.16.5"
diffusers = "^0.27.2"
transformers = "^4.39.1"
tqdm = "^4.66.2"
datasets = "^2.18.0"
accelerate = "^0.28.0"
huggingface = "^0.0.1"
fastchat = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
