[tool.poetry]
name = "laion-format2"
version = "0.1.0"
description = ""
authors = ["ohkingtaek <mm0741@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pip-tools = "^7.4.1"
lmdb = "^1.4.1"
pillow = "^10.2.0"
tqdm = "^4.66.2"
torch = "2.0.0"
torchvision = "0.15.1"
pytorch-lightning = "2.2.0.post0"
jinja2 = "^3.1.3"
pyyaml = "^6.0.1"
huggingface-hub = "^0.21.4"
yarl = "^1.9.4"
urllib3 = "^2.2.1"
timm = "^0.9.16"
sympy = "^1.12"
safetensors = "^0.4.2"
requests = "^2.31.0"
regex = "^2023.12.25"
packaging = "^24.0"
nltk = "^3.8.1"
networkx = "^3.2.1"
multidict = "^6.0.5"
setuptools = "^69.2.0"
mpmath = "^1.3.0"
markupsafe = "^2.1.5"
joblib = "^1.3.2"
idna = "^3.6"
fsspec = "^2024.2.0"
frozenlist = "^1.4.1"
click = "^8.1.7"
filelock = "^3.13.1"
charset-normalizer = "^3.3.2"
certifi = "^2024.2.2"
attrs = "^23.2.0"
async-timeout = "^4.0.3"
aiosignal = "^1.3.1"
aiohttp = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
